Adds thumbnail caching with SQLite database
Implements a thumbnail caching system to efficiently store and retrieve user profile images.
Uses a SQLite database to track cached thumbnails, preventing redundant downloads and ensuring data integrity.
Thumbnails are stored locally, organized by username, and verified using SHA256 hashes.

This enhancement improves performance and reduces bandwidth usage.

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,12 @@ credentials.json
 .env
 .env.local
 
-# Downloaded media
+# Application data
+app.db
+app.db-shm
+app.db-wal
 thumbnails/
+thumbcache/
 
 # Go build artifacts
 joystick-server
